fixed typo in App 11

--- a/caseStudyWP/11-appendix.Rmd
+++ b/caseStudyWP/11-appendix.Rmd
@@ -6,7 +6,7 @@ To explain the initially counter-intuitive result of sensitivity of projection b
 
 Specifically, we evaluated the sensitivity of aggregate projection-based LRPs to exploitation rates under three alternative scenarios:
 
-1. All inlets were assumed to have stock-recruitment parameters drawn from the same distributions (the mean and standard deviation for productivity and $S_{REP}$ as estimated for Quatsino, Westcoast Vancouver Island) but a unique set of stock-recruitment parameters was drawn for each inlet and trial (i.e. each inlet was a replicate of each other with random variability). We choose to draw $S_{REP}$ from a random distributions instead of Ricker $beta$ or $S_{MAX}$ (1/$beta$) because the $S_{REP}$ parameter was drawn randomly in projections for this case study from the watershed-area model. However, in preliminary sensitivity analyses, we sampled from a random distribution of $beta$ values and found similar results. We assumed strong positive covariation in recruitment residuals among inlets with pair-wise correlations equal to 0.7. <!--CH: plot distributions of prod and SREP-->
+1. All inlets were assumed to have stock-recruitment parameters drawn from the same distributions (the mean and standard deviation for productivity and $S_{REP}$ as estimated for Quatsino, Westcoast Vancouver Island) but a unique set of stock-recruitment parameters was drawn for each inlet and trial (i.e. each inlet was a replicate of each other with random variability). We choose to draw $S_{REP}$ from a random distributions instead of Ricker $beta$ or $S_{MAX}$ (1/$beta$) because the $S_{REP}$ parameter was drawn randomly in projections for this case study from the watershed-area model. However, in preliminary sensitivity analyses, we sampled from a random distribution of $beta$ values and found similar results. We assumed strong positive covariation in recruitment residuals among inlets with pairwise correlations equal to 0.7. <!--CH: plot distributions of prod and SREP-->
 
 2. The productivity parameter was fixed at the mean value of the assumed distribution for all inlets and trials. $S_{REP}$ was drawn from its distribution and allowed to vary across inlets and trials. <!-- across trials AND inlets-->
 
