--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -145,9 +145,9 @@ Questions to provide guidance on:
 
  There is increasing evidence of time varying parameters in Pacific salmon populations, particularly relating to declines in productivity [e.g., @holtImpactTimevaryingProductivity2020,  @dornerSpatialTemporalPatterns2018, @malickRegionalScaleDeclinesProductivity2016, petermanWidespreadDecreaseProductivity2012]. In Canada, DFO assessments identified declines in productivity for various conservation units, e.g., Fraser sockeye [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @huangRecoveryPotentialAssessment2021], Southern BC Chinook (cite SAR 2016/042), Fraser Chinook (Cite RPA)  and Interior Fraser Coho [@arbeiderInteriorFraserCoho2020]. These assessments relied on a variety of tools to identify trends in productivity including the evaluation of trends in log spawners per recruit [@arbeiderInteriorFraserCoho2020], evaluation of trends in residuals from recruitment curve fits [@grantEvaluationUncertaintyFraser2011], and explicit consideration of time-varying parameters when fitting recruitment curves using Kalman filter or recursive Bayes approach [huangRecoveryPotentialAssessment2021 and RPA].
  
- Time-varying parameters affect estimates for stock recruitment reference points (e.g. $Smsy$ and $Sgen$) and are also likely to affect population trends, resulting in changes to benchmarks based on historical observations. These effects will have an impact on the classification of CUs status. However determining support for time-varying parameters is not always straightforward. Common statistical diagnosis such as inspection of residuals and use of information criteria (e.g. AIC and BIC) often produce conflicting results [@holtImpactTimevaryingProductivity2020]. @adkisonReviewSalmonSpawnerRecruitment2021 reviewed stock recruitment analysis for Pacific salmon, including the use of environmental covariates and time-varying parameters. They highlight that even though there might be strong evidence for non stationarity in salmon populations, it is not clear if reference points should me adjusted accordingly. 
+ Time-varying parameters affect estimates for stock recruitment reference points (e.g. $Smsy$ and $Sgen$) and are also likely to affect population trends, resulting in changes to benchmarks based on historical observations. These effects will have an impact on the classification of CUs status. However determining support for time-varying parameters is not always straightforward. Common statistical diagnosis such as inspection of residuals and use of information criteria (e.g. AIC and BIC) often produce conflicting results [@holtImpactTimevaryingProductivity2020]. 
 
- There are no clear guidelines on how to proceed in terms of translating time-varying stock recruitment parameters into reference points, i.e. if time-varying reference points should be considered and how often they should be changed. Mistimed changes in reference points may lead to bias in stock status [@holtImpactTimevaryingProductivity2020]. In addition, volatility of management benchmarks may lead to management uncertainty and reduce trust in the management process. The Precautionary approach policy recommends that changes to the reference points should only be adjusted when there is considerable evidence that productivity has changed and there are no expectations that these changes will be reverted naturally or achieved through management (cite PA policy). Klaer et al 2015 devised a framework for evaluation the degree of confidence in productivity shifts in Australian fisheries, similar approaches could be adapted for Canadian Salmon populations. However, recent studies recommend the use of case specific feedback simulation exercises in order to determine the appropriate scale to adjust reference points when stock-recruitment parameters are non-stationary [@holtImpactTimevaryingProductivity2020 and @zhangAccountingNonstationaryStock2021].  
+A review of stock-recruit analyses for Pacific salmon, including the use of environmental covariates and time-varying parameters, highlighted that even when there is strong evidence for non-stationarity in salmon populations, it is not clear if reference points should me adjusted accordingly [@adkisonReviewSalmonSpawnerRecruitment2021]. There are no clear guidelines on how to proceed in terms of translating time-varying stock recruitment parameters into reference points, i.e. if time-varying reference points should be considered and how often they should be changed. Mistimed changes in reference points may lead to bias in stock status [@holtImpactTimevaryingProductivity2020]. In addition, volatility of management benchmarks may lead to management uncertainty and reduce trust in the management process. The Precautionary approach policy recommends that changes to the reference points should only be adjusted when there is considerable evidence that productivity has changed and there are no expectations that these changes will be reverted naturally or achieved through management (cite PA policy). Klaer et al 2015 devised a framework for evaluation the degree of confidence in productivity shifts in Australian fisheries, similar approaches could be adapted for Canadian Salmon populations. However, recent studies recommend the use of case specific feedback simulation exercises in order to determine the appropriate scale to adjust reference points when stock-recruitment parameters are non-stationary [@holtImpactTimevaryingProductivity2020 and @zhangAccountingNonstationaryStock2021].  
 
 
 <!--
