--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -69,11 +69,14 @@ knitr::include_graphics("figure/coho-CU-EscpSeries-Combined.png")
 
 ### CU Status Estimation
 
-We consider two types of CU benchmark to represent CU status when developing LRPs for Interior Fraser Coho. 
+We consider two alternative ways to characterize CU status when developing LRPs for Interior Fraser Coho. The first approach is based on comparing the current abundance of each CU to its CU-specific estimate of $S_{gen}$, where Sgen is the number of spawners required to recover to SMSY (spawners maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holt_indicators_2009]. $S_{gen}$ is one of several benchmarks available for assigning CU status in WSP Integrated Status Assessments; it represents a lower benchmark between red and amber status zones and was used as part of the 2014 Integrated Status Assessment for Interior Fraser Coho (citation needed).  
 
-**Sgen**
+The second approach used to characterize CU status in our case study is based on the distribution of spawning escapement among subpopulations nested within CUs (Table \@ref(tab:cohoCU2SP)). We apply this approach for Interior Fraser Coho to maintain consistency with previous recovery planning processes for this SMU (@ifcrt_interior_fraser_coho_recovery_team_conservation_2006, @arbeider_interior_2020).  We use the short-term recovery objective identified by @ifcrt_interior_fraser_coho_recovery_team_conservation_2006, which @arbeider_interior_2020 summarized as: *"the 3-year geometric average, natural-origin escapement in at least half of the subpopulations within each of the five populations is to exceed 1000 spawning Coho Salmon, excluding hatchery fish spawning in the wild"*, where 'populations' is analogous to CUs. We selected the short-term recovery target to represent a lower CU benchmark in our study because, as noted by @arbeider_interior_2020, the short-term target was designed as an immediate target when the population was endangered. As such, it was interpreted as a level expected to prevent extinction or loss of genetic diversity.  
 
-The first type is the WSP lower benchmark of  $S_{gen}$, where Sgen is the number of spawners required to recover to SMSY (spawners maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holt_indicators_2009]. Four different formulations of stock recruitment model are used to estimate Sgen based on previous analyses. Key differences among the formulations centre around whether a hierarchical model structure is used when estimating Sgen and whether an informative prior distribution is applied to the spawner abundance level at which the stock replaced itself (SRep). 
+
+**Estimation of Sgen**
+
+Four different formulations of stock recruitment model are used to estimate Sgen based on previous analyses. Key differences among the formulations centre around whether a hierarchical model structure is used when estimating Sgen and whether an informative prior distribution is applied to the spawner abundance level at which the stock replaced itself (SRep). 
 
 We primarily use the two model formulations that assume no hierarchical structure among CUs (IM and IM.cap) as a basis for comparing among LRP estimation methods, but have retained the two hierarchical model formulations (HM and HM.cap) for sensitivity analyses. Our rationale for focusing on the individual modelling approaches was two-fold.  First, because all CUs had equal amounts of data, the commonly cited benefit of hierarchical models allowing data-poor systems to borrow information from data-rich systems did not apply. Second, initial investigations of the hierarchical models fit to IF coho data showed that LRP estimates were sensitive to the choice of the assumed standard deviation on the hyper-distribution for the productivity parameter. 
 
