--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -17,7 +17,7 @@ We consider two different types of LRPs for Pacific salmon in our case studies:
 
 While aggregate abundance-based LRPs are consistent with what is typically used for marine fish species (citation needed), proportion-based LRPs have been proposed for Pacific salmon to align with DFO's Wild Salmon Policy. As a default for our case studies, we assume that in order for an SMU to remain above its proportion-based LRP, 100% of CUs must have status estimates above poor. The LRP thus functions like a trigger that gets breached anytime one of more CUs within an SMU drops into the poor status zone.  In order ensure that aggregate abundance-based LRPs are also consistent with the WSP, we use two different approaches to identify aggregate abundance levels that have a high probability of all CUs being above poor status: (i) Logistic regression-based LRPs and (ii) Projection-based LRPs. More detailed descriptions of all of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review).
 
-The above definitions hinge on what defines 'poor' status. In the case of WSP Integrated Status Assessments, in which multiple metrics are combined to assign CU status, poor status corresponds with the 'red' status zone (citation needed). Metrics used to assign multidimensional CU status include absolute abundance relative to thresholds, relative abundance, short- and long-term trends in abundance, and distribution of abundance. While WSP Integrated status assessments are typically intensive expert-driven processes (e.g., ....), we demonstrate the application of a rapid multidimensional scanning tool in that is being developed by DFO's State of the Salmon Program to assess CU status under the WSP. In cases where up-to-date estimates of WSP integrated status or mutli-dimensional rapid status are not available, CU status may be based on a single benchmark that has been selected as important for individual CUs by local experts. 
+The above definitions hinge on what defines 'poor' status. In the case of WSP Integrated Status Assessments, in which multiple metrics are combined to assign CU status, poor status corresponds with the 'red' status zone (citation needed). Metrics used to assign multidimensional CU status include absolute abundance relative to thresholds, relative abundance, short- and long-term trends in abundance, and distribution of abundance. While WSP Integrated status assessments are typically intensive expert-driven processes (e.g., ....), we demonstrate the application of a rapid multidimensional scanning tool in that is being developed by DFO's State of the Salmon Program to assess CU status under the WSP. In cases where up-to-date estimates of WSP integrated status or multi-dimensional rapid status are not available, CU status may be based on a single benchmark that has been selected as important for individual CUs by local experts. 
 
 Under Canada’s WSP, the lower benchmark is defined as a level of abundance high enough to ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction; however in practice, some of the lower benchmarks applied line up exactly with COSEWIC's definition of 'endangered'. A variety of methods are available for estimating lower benchmarks depending on species and data availability (citations needed, but see Holt et al. 2009, Grant et al. 2011, Grant et al. 2020, Holt et al. 2018). A more thorough discussion of available benchmarks, as well as how these relate to WSP Integrated Status Assessments, is provided in the companion working paper *Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units* (Holt et al. in review).
    
